--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    Hello, Welcome to Rajini Chintakula's version 2 capstone project! 🚀
+    Hello, Welcome to Rajini Chintakula's version 2 capstone project!
 </body>
 
 </html>
